[gd_scene load_steps=6 format=2]

[ext_resource path="res://world/TankUnderwater.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/Game.gd" type="Script" id=4]
[ext_resource path="res://items/Shrimp.tscn" type="PackedScene" id=5]

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="TankUnderwater" parent="." instance=ExtResource( 1 )]

[node name="Shrimp" parent="." instance=ExtResource( 5 )]
position = Vector2( 161.016, 53.1927 )

[node name="Shrimp2" parent="." instance=ExtResource( 5 )]
position = Vector2( 111.13, 23.0022 )

[node name="Shrimp3" parent="." instance=ExtResource( 5 )]
position = Vector2( 185.887, 73.7509 )

[node name="Shrimp4" parent="." instance=ExtResource( 5 )]
position = Vector2( 175.248, 44.1356 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 113.68, 109.865 )

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="EnergyTimer" type="Timer" parent="."]

[connection signal="movement" from="Player" to="." method="_on_Player_movement"]
[connection signal="timeout" from="EnergyTimer" to="." method="_on_EnergyTimer_timeout"]
